--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Weather App</title>
     </head>
     <body>
-        <h1>Weather App</h1>
+        <h1>The Weather</h1>
 
         <div class="weather-container">
             <div id="timezone"></div>
